# Kineticgas

./: .dockerignore  .gitignore  Dockerfile  README.md  build_container.sh  build_dist.sh  clean_dist.sh  common_scripts.sh  run_container.sh  setup.py
Dockerfiles/: Dockerfile
cpp/: CMakeLists.txt  Factorial.cpp  Factorial.h  KineticGas.cpp  KineticGas.h  bindings.cpp  build_integration.sh  build_kingas.sh  build_mac.sh  collision_integrals.cpp  global_params.h  potentials.cpp  readme.md
cpp/Integration/: CMakeLists.txt  Integration.cpp  Integration.h  bindings.cpp  integrator_tests.cpp  integrator_tests.h
integration/: integration_test.py  integrator_unittests.py  kin_integral_tests.py  py_integrator.py  refine_params.txt
pykingas/: __init__.py  __main__.py  collision_integral_unittests.py  mie_unittests.py  py_KineticGas.py  readme.md  test_inside.py
python/: py_KineticGas.py  py_KineticGas2.py  test.py
sandbox/: chi_integral_test.py  collision_plots.py  get_R_test.py  mie_benchmark.py  mie_conductivity.py  potential_tests.py  test_get_R.py  theta_integral_tests.py
sandbox/output/: diffusion_test_AR_HE.csv  diffusion_test_AR_HE_v0.csv  diffusion_test_AR_HE_v1.csv
sandbox/output/conductivity/: CO2_C1_T_N1_v0.csv  CO2_C1_T_mod_v0.csv  CO2_C1_rho_N1_v0.csv  CO2_C1_rho_mod_v0.csv
sandbox/output/diffusion/: AR_C1_T_N1_v0.csv  AR_C1_T_N1_v1.csv  AR_C1_T_N3_v0.csv  AR_C1_T_N5_v0.csv  AR_C1_p_N1_v0.csv  AR_C1_p_N1_v1.csv  AR_C1_p_N3_v0.csv  AR_C1_p_N5_v0.csv  AR_CO2_T_N1_v0.csv  AR_CO2_T_N1_v1.csv  AR_CO2_T_N3_v0.csv  AR_CO2_T_N5_v0.csv  AR_CO2_p_N1_v1.csv  AR_CO2_p_N3_v0.csv  AR_CO2_p_N5_v0.csv  AR_HE_T_N1_v0.csv  AR_HE_T_N1_v1.csv  AR_HE_T_N3_v0.csv  AR_HE_T_N5_v0.csv  AR_HE_p_N1_v0.csv  AR_HE_p_N3_v0.csv  AR_HE_p_N5_v0.csv  AR_NE_T_N1_v0.csv  AR_NE_T_N1_v1.csv  AR_NE_T_N3_v0.csv  AR_NE_T_N5_v0.csv  AR_NE_p_N1_v1.csv  AR_NE_p_N1_v2.csv  AR_NE_p_N3_v0.csv  AR_NE_p_N5_v0.csv  CO2_C1_T_N1_v0.csv  CO2_C1_T_N1_v1.csv  CO2_C1_T_N3_v0.csv  CO2_C1_T_N5_v0.csv  CO2_C1_p_N1_v0.csv  CO2_C1_p_N1_v1.csv  CO2_C1_p_N3_v0.csv  CO2_C1_p_N5_v0.csv  CO2_NE_T_N1_v0.csv  CO2_NE_T_N1_v1.csv  (+30 more)
