cmake_minimum_required(VERSION 3.4)
set(PYBIND11_PYTHON_VERSION "3.9")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-unknown-pragmas -std=c++17")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -DDEBUG -Wno-unused-parameter -Wno-unused-const-variable")
add_subdirectory(pybind11)

if (CMAKE_BUILD_TYPE MATCHES Release)
    message("Build type is Release")
    project(KineticGas_r)
    pybind11_add_module(KineticGas_r KineticGas.cpp Factorial.cpp)
else()
    message("Build type is Debug")
    project(KineticGas_d)
    pybind11_add_module(KineticGas_d KineticGas.cpp Factorial.cpp)
endif()

